--- a/server/package.json
+++ b/server/package.json
@@ -2,9 +2,13 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
+  "engines": {
+    "node": "16.16.0"
+  },
   "scripts": {
-    "start": "nodemon src/app.js --exec  \"npm run lint && node\"",
+    "start": "node src/app.js",
+    "start:dev": "nodemon src/app.js",
     "lint": "eslint src/**/*.js"
   },
   "keywords": [],
