--- a/server/package.json
+++ b/server/package.json
@@ -27,7 +27,9 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.8.1",
     "mongoose": "^6.5.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "multer": "^1.3.0",
+    "multer-gridfs-storage": "^1.3.0"
   },
   "devDependencies": {
     "eslint": "^8.20.0",
